# crumple-zone

./: .gitignore  README.md  pyproject.toml
contracts/: event.schema.json  evidence_envelope.schema.json  finding.schema.json  phase_receipt.schema.json  policy_replay.schema.json  run_request.schema.json  runtime_manifest.schema.json  scenario.schema.json  tool_surface.schema.json  trusted_projection.schema.json
docs/: ARCHITECTURE.md  CLAIM_BOUNDARIES.md  LIMITATIONS.md  PHASE_0_ENVIRONMENT.md  PHASE_1_LIFECYCLE.md  PHASE_2_GUEST_CODEX.md  PHASE_3_SYNTHETIC_WORKFLOW.md  PHASE_4_EVIDENCE_BOUNDARY.md  PHASE_5_REPLAY_RERUN.md
guest/: http_vsock_forwarder.c  lifecycle_init.c  mcp_vsock_proxy.c  phase2_init.c  phase3_init.c
locks/: build-target-1.json  firecracker-v1.16.1-x86_64.json  guest-kernel-6.1.176-x86_64.json  phase1-guest-image.json  phase2-guest-image.json  phase3-guest-image.json  poisoned-tool-surface-v1.json  runtime-versions.json
receipts/: build-target-1.json  phase-0.json  phase-1.json  phase-2.json  phase-3.json  phase-4.json  phase-5.json  phase-6.json
scenarios/: poisoned-tool-surface-v1.json  poisoned-tool-surface-v1.tools.json
scripts/: build-phase1-rootfs.sh  build-phase2-rootfs.sh  build-phase3-rootfs.sh  demo.sh  setup-phase1.sh  setup.sh  teardown.sh  test-fixture.sh  verify-receipts.sh
tests/: test_cli_product.py  test_codex_proxy_seam.py  test_contracts.py  test_evidence_boundary.py  test_firecracker_lifecycle.py  test_guest_codex_chamber.py  test_model_proxy.py  test_replay_and_rerun.py  test_synthetic_workflow.py
(+30 files in other folders)
