[build-system]
requires = []
build-backend = "crumple_zone.build_backend"
backend-path = ["src"]

[project]
name = "crumple-zone"
version = "0.1.0"
description = "Host-enforced evidence chamber for bounded tool-using agent exercises"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
crumple = "crumple_zone.cli:main"

[tool.crumple]
python_dependencies = "stdlib-only"
firecracker_version = "1.16.1"
codex_cli_version = "0.144.4"
